cleanup && prepare project

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,4 @@
 ---
-
 root: true
 
 plugins:
@@ -20,3 +19,4 @@ extends:
 rules:
   no-console: 0
   import/extensions: 0
+  import/prefer-default-export: 0
