Add support for multiple labels

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,6 +17,6 @@ extends:
   - 'plugin:jest/recommended'
 
 rules:
-  no-console: 0
+  no-console: error
   import/extensions: 0
   import/prefer-default-export: 0
